added a top banar

--- a/best-app/index.html
+++ b/best-app/index.html
@@ -7,10 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best App</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Courgette&family=Dancing+Script:wght@700&family=Indie+Flower&family=Mochiy+Pop+P+One&family=Poppins:ital,wght@0,700;1,300;1,400&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
-    <h1>Best App</h1>
+    <section class="top-banar">
+        <div id="div">
+            <h1>Best app for your modern lifestyle</h1>
+            <hr>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quia vel delectus magni eaque
+                mollitia consectetur maiores, eligendi impedit reiciendis veniam quod corporis, veritatis deleniti
+                necessitatibus eveniet animi sequi ad.</p>
+            <div id="button-div">
+                <button class="Try-for-free">Try for free</button>
+                <button class="Watch-free-demo">Watch free demo</button>
+            </div>
+        </div>
+        <img src="https://cdn.dribbble.com/users/30252/screenshots/4137923/shot_1.gif" alt="">
+    </section>
 
 </body>
 
