added a choses-our-app

--- a/best-app/index.html
+++ b/best-app/index.html
@@ -75,6 +75,101 @@
             </div>
         </div>
     </section>
+    <section class="smart-jackports">
+        <div class="smart-a">
+            <h1>Repudiandae minus repellat quis amet quisquam
+                modi alias dolore maiores!</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores cumque dicta totam nobis ipsam facilis,
+                dolorem nesciunt enim, possimus saepe tempore vero qui accusamus perferendis explicabo! Quam aspernatur
+                voluptates laborum.</p>
+        </div>
+        <div class="smart-b">
+            <div>
+                <img src="https://media.istockphoto.com/vectors/computer-automation-icon-element-of-automation-icon-for-mobile-and-vector-id1035271832"
+                    alt="">
+                <h3>Automatic Playout</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus fugiat, non doloremque rem sed
+                </p>
+            </div>
+            <div>
+                <img src="https://media.istockphoto.com/vectors/computer-automation-icon-element-of-automation-icon-for-mobile-and-vector-id1035271832"
+                    alt="">
+                <h3>Automatic Playout</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus fugiat, non doloremque rem sed
+                </p>
+            </div>
+            <div>
+                <img src="https://media.istockphoto.com/vectors/computer-automation-icon-element-of-automation-icon-for-mobile-and-vector-id1035271832"
+                    alt="">
+                <h3>Automatic Playout</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus fugiat, non doloremque rem sed
+                </p>
+            </div>
+        </div>
+    </section>
+    <section class="Awesome-apps-features">
+        <img class="designed"
+            src="https://cdn.publish0x.com/prod/fs/images/8fffc8103de3d1d10570f47d0952bf08ae541bec0cb4a802fea0b0540d222a5d.png"
+            alt="">
+        <div>
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, porro!</h2>
+            <p> Impedit voluptate laborum ipsam aspernatur
+                nihil nostrum beatae obcaecati magni id unde.</p>
+            <button class="Try-for-free">Try for free</button>
+        </div>
+    </section>
+    <section class="choses-our-app">
+        <div class="choses-our-app-div-1">
+            <h1>Why you should choses our app</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam incidunt consequuntur quas mollitia
+                expedita, dignissimos perspiciatis beatae rem dolor ipsum. Mollitia nemo illo harum voluptate?</p>
+        </div>
+        <div class="choses-our-app-div-2">
+            <div>
+                <img src="https://media.istockphoto.com/vectors/computer-repair-glyph-icon-monochrome-style-design-simple-element-vector-id1170319571"
+                    alt="">
+                <h3>App Devlopment</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, voluptatibus. At natus magni
+                </p>
+            </div>
+            <div>
+                <img src="https://media.istockphoto.com/vectors/computer-repair-glyph-icon-monochrome-style-design-simple-element-vector-id1170319571"
+                    alt="">
+                <h3>App Devlopment</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, voluptatibus. At natus magni
+                </p>
+            </div>
+            <div>
+                <img src="https://media.istockphoto.com/vectors/computer-repair-glyph-icon-monochrome-style-design-simple-element-vector-id1170319571"
+                    alt="">
+                <h3>App Devlopment</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, voluptatibus. At natus magni
+                </p>
+            </div>
+            <div>
+                <img src="https://media.istockphoto.com/vectors/computer-repair-glyph-icon-monochrome-style-design-simple-element-vector-id1170319571"
+                    alt="">
+                <h3>App Devlopment</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, voluptatibus. At natus magni
+                </p>
+            </div>
+            <div>
+                <img src="https://media.istockphoto.com/vectors/computer-repair-glyph-icon-monochrome-style-design-simple-element-vector-id1170319571"
+                    alt="">
+                <h3>App Devlopment</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, voluptatibus. At natus magni
+                </p>
+            </div>
+            <div>
+                <img src="https://media.istockphoto.com/vectors/computer-repair-glyph-icon-monochrome-style-design-simple-element-vector-id1170319571"
+                    alt="">
+                <h3>App Devlopment</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, voluptatibus. At natus magni
+                </p>
+            </div>
+        </div>
+    </section>
+
 
 </body>
 
